footer z-index issue.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -53,6 +53,7 @@
   padding: 3px;
   background-color: $primary-color;
   color: $on-primary-color;
+  z-index: 1000;
 }
 
 // Responsive adjustments
